src/tui/views/snapshots/whk__tui__views__snapshot_tests__destination_detail_80x24.snap
---
source: src/tui/views/snapshot_tests.rs
expression: "draw(app, width, height).backend()"
---
"  ▄▀▀▄ █▄ ▄█   Webhooker CLI v[version] "
"  ▀▄▄▀ █ ▀ █   acme · pro · app.webhooker.eu                                    "
" Sources Dests Conns Events DLQ Stats Relay Settings                            "
"┌ billing-worker ──────────────────────────────────────────────────────────────┐"
"│URL           https://billing.internal/hooks                                  │"
"│Status        ● active                                                        │"
"│Headers       X-Env: prod                                                     │"
"│Auth          hmac (secret ***)                                               │"
"│Timeout       10000 ms                                                        │"
"│Retries       30s · 2m · 10m · 1h · 4h                                        │"
"│Circuit       closed                                                          │"
"│Created       2026-09-01 10:00:00                                             │"
"│ID            0198c9f0-0000-7000-8000-0000000000d1                            │"
"│                                                                              │"
"│Fed by                                                                        │"
"│  ● stripe-prod                                                               │"
"│  ○ github-ci                                                                 │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" e edit · y copy · P pause · D delete · j/k scroll · esc back · r refres 3s ago "
