src/tui/views/snapshots/whk__tui__views__snapshot_tests__destinations_120x40.snap
---
source: src/tui/views/snapshot_tests.rs
expression: "draw(app, width, height).backend()"
---
"  ▄▀▀▄ █▄ ▄█   Webhooker CLI v[version] "
"  ▀▄▄▀ █ ▀ █   acme · pro · app.webhooker.eu                                                                            "
"┌──────────────┐┌ Destinations ────────────────────────────────────────────────────────────────────────────────────────┐"
"│  Sources     ││▸ ●  billing-worker                            billing.internal                         closed        │"
"│▸ Destinations││  ●  audit-log                                 audit.example.com                        ⚡ open       │" Hidden by multi-width symbols: [(106, " ")]
"│  Connections ││                                                                                                      │"
"│  Events      ││                                                                                                      │"
"│  DLQ         ││                                                                                                      │"
"│  Stats       ││                                                                                                      │"
"│  Relay       ││                                                                                                      │"
"│  Settings    ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"└──────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" enter open · n new · e edit · D delete · r refresh · ? help · q quit                                            3s ago "
