src/tui/views/snapshots/whk__tui__views__snapshot_tests__destinations_80x24.snap
---
source: src/tui/views/snapshot_tests.rs
expression: "draw(app, width, height).backend()"
---
"  ▄▀▀▄ █▄ ▄█   Webhooker CLI v[version] "
"  ▀▄▄▀ █ ▀ █   acme · pro · app.webhooker.eu                                    "
" Sources Dests Conns Events DLQ Stats Relay Settings                            "
"┌ Destinations ────────────────────────────────────────────────────────────────┐"
"│▸ ●  billing-worker                billing.internal             closed        │"
"│  ●  audit-log                     audit.example.com            ⚡ open       │" Hidden by multi-width symbols: [(66, " ")]
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" enter open · n new · e edit · D delete · r refresh · ? help · q quit    3s ago "
