src/tui/views/snapshots/whk__tui__views__snapshot_tests__dlq_120x40.snap
---
source: src/tui/views/snapshot_tests.rs
expression: "draw(app, width, height).backend()"
---
"  ▄▀▀▄ █▄ ▄█   Webhooker CLI v[version] "
"  ▀▄▄▀ █ ▀ █   acme · pro · app.webhooker.eu                                                                            "
"┌──────────────┐┌ DLQ · stripe-prod · exhausted,failed ────────────────────────────────────────────────────────────────┐"
"│  Sources     ││▸ billing-worker                                                          4 exhausted     1 failed    │"
"│  Destinations││  audit-log                                                               0 exhausted     2 failed    │"
"│  Connections │└──────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"│  Events      │┌ Deliveries · billing-worker ─────────────────────────────────────────────────────────────────────────┐"
"│▸ DLQ         ││▸ 2026-09-23 10:00:00  ✕ exhausted   8 attempts   HTTP 500  HTTP 500                                  │"
"│  Stats       ││  2026-09-23 10:00:00  ✕ failed      8 attempts   HTTP 410  HTTP 410 Gone                             │"
"│  Relay       ││                                                                                                      │"
"│  Settings    ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"└──────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" enter open · R resend · F filters · esc summary · ? help                                                        3s ago "
