src/tui/views/snapshots/whk__tui__views__snapshot_tests__dlq_80x24.snap
---
source: src/tui/views/snapshot_tests.rs
expression: "draw(app, width, height).backend()"
---
"  ▄▀▀▄ █▄ ▄█   Webhooker CLI v[version] "
"  ▀▄▄▀ █ ▀ █   acme · pro · app.webhooker.eu                                    "
" Sources Dests Conns Events DLQ Stats Relay Settings                            "
"┌ DLQ · stripe-prod · exhausted,failed ────────────────────────────────────────┐"
"│▸ billing-worker                                  4 exhausted     1 failed    │"
"│  audit-log                                       0 exhausted     2 failed    │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Deliveries · billing-worker ─────────────────────────────────────────────────┐"
"│▸ 2026-09-23 10:00:00  ✕ exhausted   8 attempts   HTTP 500  HTTP 500          │"
"│  2026-09-23 10:00:00  ✕ failed      8 attempts   HTTP 410  HTTP 410 Gone     │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" enter open · R resend · F filters · esc summary · ? help                3s ago "
