src/tui/views/snapshots/whk__tui__views__snapshot_tests__event_detail_120x40.snap
---
source: src/tui/views/snapshot_tests.rs
expression: "draw(app, width, height).backend()"
---
"  ▄▀▀▄ █▄ ▄█   Webhooker CLI v[version] "
"  ▀▄▄▀ █ ▀ █   acme · pro · app.webhooker.eu                                                                            "
"┌──────────────┐┌ evt_8f2a1b ──────────────────────────────────────────────────────────────────────────────────────────┐"
"│  Sources     ││POST evt_8f2a1b · stripe-prod · 2026-09-23 12:04:11                                                   │"
"│  Destinations││✓ verified · application/json · 62 B · expires 2026-10-23 12:04:11                                    │"
"│  Connections ││                                                                                                      │"
"│▸ Events      ││┌ Headers ──────────────────────────────┐┌ Body ─────────────────────────────────────────────────────┐│"
"│  DLQ         │││content-type: application/json         ││{                                                          ││"
"│  Stats       │││stripe-signature: t=1726000000,v1=5257a││  "amount": 1200,                                          ││"
"│  Relay       │││user-agent: Stripe/1.0                 ││  "note": null,                                            ││"
"│  Settings    │││                                       ││  "paid": true,                                            ││"
"│              │││                                       ││  "type": "invoice.paid"                                   ││"
"│              │││                                       ││}                                                          ││"
"│              │││                                       ││                                                           ││"
"│              │││                                       ││                                                           ││"
"│              │││                                       ││                                                           ││"
"│              │││                                       ││                                                           ││"
"│              │││                                       ││                                                           ││"
"│              │││                                       ││                                                           ││"
"│              │││                                       ││                                                           ││"
"│              │││                                       ││                                                           ││"
"│              │││                                       ││                                                           ││"
"│              │││                                       ││                                                           ││"
"│              │││                                       ││                                                           ││"
"│              ││└───────────────────────────────────────┘└───────────────────────────────────────────────────────────┘│"
"│              ││┌ Deliveries ────────────────────────────────────────────────────────────────────────────────────────┐│"
"│              │││  ✓ billing-worker  succeeded  1 attempt                                                            ││"
"│              │││  ✕ audit-log  exhausted  2 attempts                                                                ││"
"│              │││                                                                                                    ││"
"│              │││                                                                                                    ││"
"│              │││                                                                                                    ││"
"│              │││                                                                                                    ││"
"│              │││                                                                                                    ││"
"│              │││                                                                                                    ││"
"│              │││                                                                                                    ││"
"│              │││                                                                                                    ││"
"│              │││                                                                                                    ││"
"│              ││└────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"└──────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" tab pane · enter attempts · R replay · / headers · w wrap · esc back                                            3s ago "
