src/tui/views/snapshots/whk__tui__views__snapshot_tests__event_detail_80x24.snap
---
source: src/tui/views/snapshot_tests.rs
expression: "draw(app, width, height).backend()"
---
"  ▄▀▀▄ █▄ ▄█   Webhooker CLI v[version] "
"  ▀▄▄▀ █ ▀ █   acme · pro · app.webhooker.eu                                    "
" Sources Dests Conns Events DLQ Stats Relay Settings                            "
"┌ evt_8f2a1b ──────────────────────────────────────────────────────────────────┐"
"│POST evt_8f2a1b · stripe-prod · 2026-09-23 12:04:11                           │"
"│✓ verified · application/json · 62 B · expires 2026-10-23 12:04:11            │"
"│                                                                              │"
"│┌ Headers ───────────────────────────────────────────────────────────────────┐│"
"││content-type: application/json                                              ││"
"││stripe-signature: t=1726000000,v1=5257a869                                  ││"
"││user-agent: Stripe/1.0                                                      ││"
"│└────────────────────────────────────────────────────────────────────────────┘│"
"│┌ Body ──────────────────────────────────────────────────────────────────────┐│"
"││{                                                                           ││"
"││  "amount": 1200,                                                           ││"
"││  "note": null,                                                             ││"
"││  "paid": true,                                                             ││"
"│└────────────────────────────────────────────────────────────────────────────┘│"
"│┌ Deliveries ────────────────────────────────────────────────────────────────┐│"
"││  ✓ billing-worker  succeeded  1 attempt                                    ││"
"││  ✕ audit-log  exhausted  2 attempts                                        ││"
"│└────────────────────────────────────────────────────────────────────────────┘│"
"└──────────────────────────────────────────────────────────────────────────────┘"
" tab pane · enter attempts · R replay · / headers · w wrap · esc back    3s ago "
