src/tui/views/snapshots/whk__tui__views__snapshot_tests__events_120x40.snap
---
source: src/tui/views/snapshot_tests.rs
expression: "draw(app, width, height).backend()"
---
"  ▄▀▀▄ █▄ ▄█   Webhooker CLI v[version] "
"  ▀▄▄▀ █ ▀ █   acme · pro · app.webhooker.eu                                                                            "
"┌──────────────┐┌ Events ──────────────────────────────────────────────────────────────────────────────────────────────┐"
"│  Sources     ││source: all sources · verification: any · window: all time                                            │"
"│  Destinations││page 1/3 · 120 events                                                                                 │"
"│  Connections ││▸ 2026-09-23 12:04:11  POST    evt_8f2a1b     stripe-prod     application/j  1.2 KB    ✓  ✓2 ✕1       │"
"│▸ Events      ││  2026-09-23 12:04:11  POST    evt_77c1d0     github-ci       application/j  1.2 KB    ✕  …1          │"
"│  DLQ         ││  2026-09-23 12:04:11  POST    evt_1b9e44     stripe-prod     application/j  1.2 KB    –  -           │"
"│  Stats       ││                                                                                                      │"
"│  Relay       ││                                                                                                      │"
"│  Settings    ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"└──────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" enter open · F filters · [ ] pages · r refresh · ? help                                                         3s ago "
