src/tui/views/snapshots/whk__tui__views__snapshot_tests__events_80x24.snap
---
source: src/tui/views/snapshot_tests.rs
expression: "draw(app, width, height).backend()"
---
"  ▄▀▀▄ █▄ ▄█   Webhooker CLI v[version] "
"  ▀▄▄▀ █ ▀ █   acme · pro · app.webhooker.eu                                    "
" Sources Dests Conns Events DLQ Stats Relay Settings                            "
"┌ Events ──────────────────────────────────────────────────────────────────────┐"
"│source: all sources · verification: any · window: all time                    │"
"│page 1/3 · 120 events                                                         │"
"│▸ 2026-09-23 12:04:11  POST    evt_8  stripe  appli  1.2 KB    ✓  ✓2 ✕1       │"
"│  2026-09-23 12:04:11  POST    evt_7  github  appli  1.2 KB    ✕  …1          │"
"│  2026-09-23 12:04:11  POST    evt_1  stripe  appli  1.2 KB    –  -           │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" enter open · F filters · [ ] pages · r refresh · ? help                 3s ago "
