src/tui/views/snapshots/whk__tui__views__snapshot_tests__events_source_tab_120x40.snap
---
source: src/tui/views/snapshot_tests.rs
expression: "draw(&app, 120, 40).backend()"
---
"  ▄▀▀▄ █▄ ▄█   Webhooker CLI v[version] "
"  ▀▄▄▀ █ ▀ █   acme · pro · app.webhooker.eu                                                                            "
"┌──────────────┐┌ stripe-prod ─────────────────────────────────────────────────────────────────────────────────────────┐"
"│▸ Sources     ││1 Overview   2 Live   3 Events   4 Connections   5 DLQ                                                │"
"│  Destinations││                                                                                                      │"
"│  Connections ││source: stripe-prod · verification: any · window: all time                                            │"
"│  Events      ││page 1/3 · 120 events                                                                                 │"
"│  DLQ         ││▸ 2026-09-23 12:04:11  POST    evt_8f2a1b             application/json       1.2 KB    ✓  ✓2 ✕1       │"
"│  Stats       ││  2026-09-23 12:04:11  POST    evt_77c1d0             application/json       1.2 KB    ✕  …1          │"
"│  Relay       ││  2026-09-23 12:04:11  POST    evt_1b9e44             application/json       1.2 KB    –  -           │"
"│  Settings    ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"│              ││                                                                                                      │"
"└──────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" enter open · F filters · [ ] pages · 1-5 tabs · esc back                                                        0s ago "
